# Cmake_Build_Env

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Jenkinsfile  Jenkinsfile.groovy  Makefile  Notes.txt  README.md  avr.cmake  clean.sh  swc_paths.cmake
.devcontainer/: .gitrc  Dockerfile  devcontainer.json
Debug/: Challenge1.lss
Docs/: Repo_Representation.md
build_env/: CMakeCache.txt  Makefile  cmake_install.cmake  final
cross_compile_avr/: avr.cmake
scripts/: build.sh  cmake_build.sh
src_code/: main.c
src_code/Model/: CMakeLists.txt  Controller.h  Controller_types.h
src_code/Model/Model_gen_data/: Controller.c  Controller.h  Controller_private.h  Controller_types.h  rt_defines.h  rtwtypes.h
src_code/SWC_one/: CMakeLists.txt  SWC_one.c  SWC_one.h
src_code/SWC_one/testing/: CMakeLists.txt  SWC_one_test.c  SWC_one_test.cpp
src_code/SWC_one/testing/mocks/avr/: io.h
src_code/SWC_one/testing/mocks/util/: delay.h
src_code/SWC_three/: CMakeLists.txt  SWC_three.c  SWC_three.h
src_code/SWC_three/testing/: CMakeLists.txt  swc_three_test.cpp
src_code/SWC_two/: CMakeLists.txt  SWC_two.c  SWC_two.h
src_code/SWC_two/testing/: CMakeLists.txt  swc_two_test.cpp
src_code/SWC_two/testing/mocks/avr/: io.h
src_code/SWC_two/testing/mocks/mocks/: avr_mocks.c
test_reports/: results.html  results.xml
